--- a/leetcode/pom.xml
+++ b/leetcode/pom.xml
@@ -7,6 +7,7 @@
     <groupId>icu.xiamu</groupId>
     <artifactId>leetcode</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
