--- a/spring-demo/pom.xml
+++ b/spring-demo/pom.xml
@@ -8,6 +8,9 @@
     <artifactId>spring-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+    <modules>
+        <module>spring-redis</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
