--- a/spring-demo/java-read-file/pom.xml
+++ b/spring-demo/java-read-file/pom.xml
@@ -3,16 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>icu.xiamu</groupId>
+        <artifactId>spring-demo</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>icu.xiamu</groupId>
-    <artifactId>spring-demo</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>spring-redis</module>
-        <module>java-demo</module>
-        <module>java-read-file</module>
-    </modules>
+    <artifactId>java-read-file</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
