--- a/spring-demo/spring-redis/pom.xml
+++ b/spring-demo/spring-redis/pom.xml
@@ -20,6 +20,12 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson</artifactId>
+                <version>3.21.3</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -74,6 +80,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
         </dependency>
     </dependencies>
 
