--- a/rabbimt-demo/pom.xml
+++ b/rabbimt-demo/pom.xml
@@ -7,6 +7,11 @@
     <groupId>icu.xiamu</groupId>
     <artifactId>rabbimt-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>module01-hello-world</module>
+        <module>module02-work-way</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
