--- a/spring-demo/spring-cache/src/main/resources/application.yaml
+++ b/spring-demo/spring-cache/src/main/resources/application.yaml
@@ -12,6 +12,10 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
+  cache:
+    type: caffeine
+    caffeine:
+      spec: initialCapacity=100,maximumSize=500,expireAfterWrite=600s
 
 server:
   port: 8888
