--- a/rabbimt-demo/module03-springboot-consumer/pom.xml
+++ b/rabbimt-demo/module03-springboot-consumer/pom.xml
@@ -11,10 +11,16 @@
     </properties>
 
     <parent>
+        <groupId>icu.xiamu</groupId>
+        <artifactId>rabbimt-demo</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
+    <!--<parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.1.5</version>
-    </parent>
+    </parent>-->
     <artifactId>module03-springboot-consumer</artifactId>
 
     <dependencies>
