--- a/spring-demo/spring-redis/pom.xml
+++ b/spring-demo/spring-redis/pom.xml
@@ -161,10 +161,10 @@
     </dependencies>
 
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
+<!--        <maven.compiler.source>8</maven.compiler.source>-->
+<!--        <maven.compiler.target>8</maven.compiler.target>-->
+<!--        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
+<!--        <java.version>1.8</java.version>-->
         <!--<tomcat.version>10.1.23</tomcat.version>-->
     </properties>
 
