--- a/spring-demo/java-demo/pom.xml
+++ b/spring-demo/java-demo/pom.xml
@@ -49,6 +49,14 @@
             <version>2.0.43</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
