--- a/spring-demo/pom.xml
+++ b/spring-demo/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
-        <module>spring-redis</module>
+        <!--<module>spring-redis</module>-->
         <module>java-demo</module>
         <module>java-read-file</module>
         <module>spring-cache</module>
