--- a/spring-demo/langchain4j-demo/src/main/resources/application.yaml
+++ b/spring-demo/langchain4j-demo/src/main/resources/application.yaml
@@ -6,6 +6,12 @@ langchain4j:
       model-name: qwen-plus
       log-requests: true #请求消息日志
       log-responses: true #响应消息日志
+    streaming-chat-model: #流式模型配置
+      base-url: https://dashscope.aliyuncs.com/compatible-mode/v1
+      api-key: ${API-KEY}
+      model-name: qwen-plus
+      log-requests: true
+      log-responses: true
 logging:
   level:
     dev.langchain4j: debug #日志级别
