--- a/spring-demo/langchain4j-demo/src/main/resources/application.yaml
+++ b/spring-demo/langchain4j-demo/src/main/resources/application.yaml
@@ -15,3 +15,9 @@ langchain4j:
 logging:
   level:
     dev.langchain4j: debug #日志级别
+
+spring:
+  data:
+    redis:
+      host: 192.168.1.100
+      port: 6379
