--- a/spring-demo/langchain4j-demo/src/main/resources/application.yaml
+++ b/spring-demo/langchain4j-demo/src/main/resources/application.yaml
@@ -12,6 +12,12 @@ langchain4j:
       model-name: qwen-plus
       log-requests: true
       log-responses: true
+    embedding-model:
+      base-url: https://dashscope.aliyuncs.com/compatible-mode/v1
+      api-key: ${API-KEY}
+      model-name: text-embedding-v3
+      log-requests: true
+      log-responses: true
 logging:
   level:
     dev.langchain4j: debug #日志级别
