--- a/spring-demo/langchain4j-demo/src/main/resources/application.yaml
+++ b/spring-demo/langchain4j-demo/src/main/resources/application.yaml
@@ -32,3 +32,12 @@ spring:
     redis:
       host: 192.168.1.100
       port: 6380
+  datasource:
+    username: root
+    password: 123456
+    url: jdbc:mysql://192.168.1.100:3306/volunteer?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+mybatis:
+  configuration:
+    map-underscore-to-camel-case: true
